--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,6 @@ jobs:
         npm run build
         git config --global user.name "wasac+githubci"
         git config --global user.email "wasac+githubci@users.noreply.github.com"
-        git remote set-url origin https://x-access-token:${NODE_AUTH_TOKEN}@github.com/WASAC/mapbox-gl-js-client.git
+        git remote set-url origin https://x-access-token:${NODE_AUTH_TOKEN}@github.com/WASAC/mapboxgljs-v2.git
         npm run deploy
       
