--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
-    - run: npm ci
+    - run: yarn
       env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - name: configure git, build and deploy
@@ -27,9 +27,9 @@ jobs:
         ACCESSTOKEN: ${{secrets.ACCESSTOKEN}}
       run: |
         echo "ACCESSTOKEN=${ACCESSTOKEN}" > .env
-        npm run build
+        yarn run build
         git config --global user.name "wasac+githubci"
         git config --global user.email "wasac+githubci@users.noreply.github.com"
         git remote set-url origin https://x-access-token:${NODE_AUTH_TOKEN}@github.com/WASAC/mapboxgljs-v2.git
-        npm run deploy
+        yarn run deploy
       
